--- a/css/styles.css
+++ b/css/styles.css
@@ -878,15 +878,10 @@ a {
   height: 100vh;
 }
 
-.SplashImage {
-  width: 100%;
-  height: 100%;
-}
-
 .progress_bar_container {
   position: absolute;
   left: 50%;
-  top: 50%;
+  top: 30%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   height: 10px;
@@ -944,9 +939,11 @@ a {
   }
 }
 
-@media screen and (min-width: 600px) {
-  .SplashImage {
-    display: none;
+@media screen and (max-width: 600px) {
+  .ProgressBarWrapper {
+    background: url("../img/Splash_Screen.png");
+    background-repeat: no-repeat;
+    background-size: contain;
   }
 }
 /*#endregion Splash Screen*/
@@ -1086,10 +1083,6 @@ a {
     text-align: center;
   }
 
-  .login-desktop img {
-    padding: 3rem 2rem;
-  }
-
   .login-parent {
     background-image: none;
     background-color: var(--primary_BlueShade_1);
@@ -1146,6 +1139,7 @@ a {
 .about-content1-wrapper {
   padding: 1rem;
   background-color: var(--tertiary_ColorShade_1);
+  padding-bottom: 2.5rem;
 }
 
 .about-content2,
@@ -1158,10 +1152,17 @@ a {
 }
 
 .about-content1 {
-  display: grid;
-  grid-template-columns: 40% 60%;
-  padding: 2rem 1rem;
-  place-items: center;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+}
+
+.about-content1-content {
+  text-align: center;
+}
+
+.about-content1-content p {
+  margin-bottom: 0;
 }
 
 .about-content2 p {
@@ -1181,13 +1182,14 @@ a {
 
 .about-content1 h2 {
   margin-bottom: 0;
-  text-align: left;
+  text-align: center;
   font-size: 2rem !important;
   color: black;
 }
 
 .about-content1 button {
   margin-top: 2rem;
+  margin-bottom: 2rem;
   padding: 0.5rem 2rem;
   color: white;
   background-color: var(--primary_BlueShade_1);
@@ -1285,11 +1287,44 @@ a {
   grid-column: 1/-1;
 }
 
+@media screen and (min-width: 740px) {
+
+  .about-content1 {
+    display: grid;
+    grid-template-columns: 40% 60%;
+    padding: 2rem 1rem;
+    place-items: center;
+  }
+  
+  .about-content1-content {
+    justify-self: flex-end;
+    text-align: left;
+  }
+
+  .about-wrapper .about-content1-content h2 {
+    text-align: left;
+    margin-bottom: 2rem;
+  }
+
+  .about-content1-wrapper {
+    padding-bottom: 1rem;
+  }
+
+  .about-content1 button {
+    margin-bottom: 0;
+  }
+
+  .about-content1-content p {
+    margin-bottom: 0.5rem;
+  }
+
+}
+
 @media screen and (min-width: 1200px) {
   .about-content1,
   .desktop-grid,
   .about-team {
-    max-width: 1200px;
+    max-width: 1400px;
     margin: 0 auto;
   }
 
@@ -2094,12 +2129,15 @@ a {
 
   .specific-desc p {
     margin-top: 0;
+    margin-bottom: 0;
     padding-top: 2rem;
-    padding-left: 2.5rem;
+    padding-bottom: 1.5rem;
   }
 
   .specific-desc {
     margin: 0 auto;
+    width:50%;
+    max-width:1200px;
   }
 
   .specific-heading {
