--- a/css/styles.css
+++ b/css/styles.css
@@ -229,7 +229,7 @@ a {
 .search-bar-container {
   background-color: var(--primary_BlueShade_2);
 }
-.Search_field_Icon_Container input[type="text"]{
+.Search_field_Icon_Container input[type="text"] {
   color: black;
   text-align: left;
   border-bottom: 2px var(--primary_BlueShade_1);
@@ -237,10 +237,7 @@ a {
 #SearchInputField::placeholder {
   color: black;
   opacity: 1;
-  
 }
-
-
 
 #categories {
   background-color: var(--primary_BlueShade_1);
@@ -417,7 +414,7 @@ a {
   -webkit-box-shadow: 0 0 15px black;
   box-shadow: 0 0 15px black;
 }
-.Search_field_Icon_Container input[type="text"]{
+.Search_field_Icon_Container input[type="text"] {
   border-bottom: 4px solid var(--primary_BlueShade_1);
 }
 
@@ -449,7 +446,7 @@ a {
   .search-bar-container {
     background-color: var(--primary_BlueShade_2);
   }
-  
+
   #categories {
     background-color: var(--primary_BlueShade_1);
     color: white;
@@ -1454,11 +1451,7 @@ a {
 
 .signup-wrapper h1 {
   margin: 0;
-  margin-top: 1rem;
-    text-align: center;
-    padding-top: 0rem;
-    margin-bottom: 1rem;
-
+  text-align: center;
 }
 
 .signup-wrapper .fa-phone {
@@ -1483,9 +1476,7 @@ a {
 .Confirm_Password,
 .Phone_Number,
 .Address {
-  margin-bottom: 1rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  margin-bottom: 0.5rem;
   padding-top: 0.5rem;
 }
 .mb-LoginLink {
@@ -1503,22 +1494,21 @@ a {
   color: var(--primary_BlueShade_1);
   text-decoration: underline;
 }
-@media screen and (max-width: 1200px) {
-  .signup-desktop {
-    display: none;
-  }
+.signup-desktop {
+  display: none;
 }
 .signup-wrapper {
   max-width: fit-content;
   margin-left: auto;
   margin-right: auto;
+  padding: 1rem;
   border-radius: 1.5rem;
   background-color: white;
   box-shadow: var(--primary_box_shadow);
 }
-.signup-grid h2{
+.signup-grid h2 {
   font-family: "Fira Sans", sans-serif;
-    font-size: 36px;
+  font-size: 36px;
 }
 .fa-link:before {
   color: white;
@@ -1548,50 +1538,6 @@ a {
 .icon-size {
   font-size: 22px;
 }
-@media screen and (min-width: 1200px) {
-  .signup-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1rem;
-  }
-
-  .mb-LoginLink {
-    display: none;
-  }
-
-  .signup-desktop {
-    place-self: center;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-  }
-
-  /* .signup-desktop img {
-    padding: 3rem 2rem;
-  } */
-  #LoginBtn {
-    width: 100px;
-    margin: 0 auto;
-  }
-  #SignUpBtn {
-    width: 100px;
-    margin: 0 auto;
-  }
-
-  .signup-parent {
-    background-image: none;
-    background-color: var(--primary_BlueShade_1);
-  }
-
-  .signup-wrapper {
-    max-width: 1200px;
-    width: 400px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 1rem;
-  }
-}
-
 /* Style and horizontally align the wrapper div */
 .SignUp-wrapper {
   margin: 0 auto;
@@ -1636,9 +1582,7 @@ a {
 
 .SignUp-buttons {
   text-align: center;
-  margin-bottom: 1rem;
-  margin-top: 2rem;
-  padding: .5rem;
+  margin: 1rem 0;
 }
 
 #SignUpBtn {
@@ -1669,6 +1613,53 @@ a {
 
 .errorContainr.active {
   display: block;
+}
+
+.mb-LoginLink {
+  margin-top: 1rem;
+}
+@media screen and (min-width: 1200px) {
+  .signup-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+  }
+
+  .mb-LoginLink {
+    display: none;
+  }
+
+  .signup-desktop {
+    place-self: center;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  /* .signup-desktop img {
+    padding: 3rem 2rem;
+  } */
+  #LoginBtn {
+    width: 100px;
+    margin: 0 auto;
+  }
+  #SignUpBtn {
+    width: 100px;
+    margin: 0 auto;
+  }
+
+  .signup-parent {
+    background-image: none;
+    background-color: var(--primary_BlueShade_1);
+  }
+
+  .signup-wrapper {
+    max-width: 1200px;
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1rem;
+  }
 }
 
 /* #endregion SignUP */
