--- a/css/styles.css
+++ b/css/styles.css
@@ -1076,6 +1076,9 @@ a {
   margin-left: auto;
   margin-right: auto;
 }
+.link-icon{
+  color: white;
+}
 .visually-hidden {
   clip: rect(0 0 0 0);
   clip-path: inset(50%);
