--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,31 @@ a {
   display: flex;
   justify-content: start;
 }
+.text_btn_wrapper {
+  background-color: var(--primary_BlueShade_1);
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem;
+  border-top-left-radius: 0.4rem;
+  border-top-right-radius: 0.4rem;
+}
+
+.text_btn_wrapper h3 {
+  margin: 0.3rem;
+  font-weight: normal;
+}
+
+#CrossIcon {
+  font-size: 1rem;
+  font-weight: normal;
+  border: 1px solid white;
+  border-radius: 50%;
+  padding: 0.3rem;
+  margin: 0 0.3rem;
+  color: white;
+}
 
 .LogoContainer img {
   height: 100%;
@@ -521,12 +546,27 @@ a {
 }
 
 .NotificationPopUp {
-  width: 100%;
-  background-color: var(--secondary_PinkShade_2);
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   -webkit-backdrop-filter: blur(8px);
   backdrop-filter: blur(8px);
+  display: flex;
+  flex-direction: column;
+  border-bottom-left-radius: 0.4rem;
+  border-bottom-right-radius: 0.4rem;
+}
+
+.ownerNotification,
+.customerNotification {
+  padding-bottom: 0.2rem;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem;
+  border-bottom: 1px solid grey;
+}
+
+.ownerNotification:hover,
+.customerNotification:hover {
+  background-color: var(--secondary_PinkShade_2);
 }
 
 .Notification_id1 {
@@ -542,46 +582,21 @@ a {
   border-bottom: 5px solid var(--primary_BlueShade_1);
 }
 
-.NotificationPopUp div {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
-}
-
-.NotificationPopUp h3 {
-  margin: 0.5rem 0;
-  font-style: italic;
-}
-
-.NotificationPopUp button {
-  color: white;
-  font-style: italic;
-  background-color: var(--primary_BlueShade_1);
-  border-radius: 5px;
-  /* -webkit-box-shadow: 0 4px 2px -2px gray; */
-  box-shadow: var(--primary_box_shadow);
-  padding: 0.2rem 0.5rem;
-  margin: 0.5rem 0;
-}
-
 .Notification_wrapper {
   position: relative;
+  border-radius: 0.4rem;
 }
 
 .NotificationPopUpContainer {
   position: absolute;
   margin: 0 1rem;
-  padding: 1rem;
-  border: 2px solid var(--primary_BlueShade_1);
   display: flex;
+  flex-flow: column nowrap;
   opacity: 0;
   z-index: -1;
   top: 0;
   right: 0;
-  width: 300px;
+  width: 370px;
   border-radius: 10px;
   -webkit-box-shadow: 0 0 15px black;
   box-shadow: 0 0 15px black;
@@ -604,7 +619,7 @@ a {
   height: 0;
   position: absolute;
   top: -10px;
-  right: 50px;
+  right: 57px;
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
   border-bottom: 10px solid var(--primary_BlueShade_1);
