--- a/css/styles.css
+++ b/css/styles.css
@@ -550,6 +550,7 @@ a {
   box-sizing: border-box;
   -webkit-backdrop-filter: blur(8px);
   backdrop-filter: blur(8px);
+  background-color: rgba(256, 256, 256, 0.6);
   display: flex;
   flex-direction: column;
   border-bottom-left-radius: 0.4rem;
