--- a/css/styles.css
+++ b/css/styles.css
@@ -536,15 +536,19 @@ a {
 .mb-menu ul {
   padding: 0;
   list-style: none;
+  margin:2px;
 }
 .mb-menu li{
   display:flex;
   align-items:center;
+  padding:0px;
 }
+
 
 .mb-menu ul li {
   margin: 0 1rem 0.5rem 1rem;
   padding: 1rem 0;
+  margin-bottom: 0px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   border-bottom: 1px solid #b6babb;
