--- a/css/styles.css
+++ b/css/styles.css
@@ -527,27 +527,25 @@ a {
 /* ************************************************************************************ */
 
 /*#region Navigation*/
-.mb-menu-text{
+.mb-menu-text {
   color: var(--primary_BlueShade_1);
 }
-.mb-menu a{
-  margin-right:7px;
+.mb-menu a {
+  margin-right: 7px;
 }
 .mb-menu ul {
   padding: 0;
   list-style: none;
-  margin:2px;
+  margin: 2px;
 }
-.mb-menu li{
-  display:flex;
-  align-items:center;
-  padding:0px;
+.mb-menu li {
+  display: flex;
+  align-items: center;
+  padding: 0px;
 }
-
 
 .mb-menu ul li {
-  margin: 0 1rem 0.5rem 1rem;
-  padding: 1rem 0;
+  padding: 0.5rem;
   margin-bottom: 0px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -580,7 +578,6 @@ a {
 }
 
 .menu_active {
-  padding: 0.5rem 0;
   opacity: 1;
   z-index: 2;
   transform: translateY(1%);
@@ -591,7 +588,7 @@ a {
   box-sizing: border-box;
   -webkit-backdrop-filter: blur(8px);
   backdrop-filter: blur(8px);
-  background-color: rgba(256, 256, 256, 0.6);
+  background-color: rgba(256, 256, 256, 0.7);
   display: flex;
   flex-direction: column;
   border-bottom-left-radius: 0.4rem;
@@ -1059,7 +1056,7 @@ a {
 
 .login-parent {
   height: 100vh;
-  background: url("https://picsum.photos/1200/500?random=11");
+  background: url("../img/Login_SignUp_BG.png");
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -1581,7 +1578,7 @@ a {
 /* #region SignUP */
 .signup-parent {
   height: 100vh;
-  background: url(https://picsum.photos/1200/500?random=11);
+  background: url("../img/Login_SignUp_BG.png");
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -2172,7 +2169,6 @@ a {
 
 /* #region Specific Listing Page*/
 
-
 .specific-wrapper {
   width: 100%;
 }
@@ -2723,8 +2719,6 @@ form label span {
   .payment .checkbox-buttons .label_checkbox_wrapper {
     justify-content: center;
   }
-
-  
 }
 
 /* #endregion CreateListing */
