--- a/css/styles.css
+++ b/css/styles.css
@@ -156,7 +156,7 @@ a {
   z-index: -1;
   width: 100%;
   opacity: 0;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   margin: 0 auto;
