--- a/css/styles.css
+++ b/css/styles.css
@@ -2734,6 +2734,10 @@ form label span {
   }
 }
 
+#default-img{
+  width: 10rem;
+}
+
 /* #endregion CreateListing */
 
 /* ************************************************************************************ */
